--- a/index.html
+++ b/index.html
@@ -364,7 +364,17 @@
                 </div>
             </div>
         </main>
-        <footer class="footer"></footer>
+        <footer class="footer">
+            <div class="container">
+                <div class="space"></div>
+                <div class="footer-body">
+                    <span>Author: Sary Alexandr</span>
+                    <span>Version: beta-0.3</span>
+                    <span>Special for DataMola JS Camping</span>
+                </div>
+            </div>
+            
+        </footer>
     </div>
 </body>
 </html>
