--- a/index.html
+++ b/index.html
@@ -370,6 +370,7 @@
                 <div class="footer-body">
                     <span>Author: Sary Alexandr</span>
                     <span>Version: beta-0.3</span>
+                    <span>Date: 24.10.2020</span>
                     <span>Special for DataMola JS Camping</span>
                 </div>
             </div>
