--- a/src/index.html
+++ b/src/index.html
@@ -248,8 +248,8 @@
                         <section class="chat-section">
                             <section class="message-list">
                                 <!-- Messages -->
-                                <article class="message-body">
-                                    <div class="my-message">
+                                <!-- <article class="message-body">
+                                    <div class="all-message my-message">
                                         <div class="message-header">
                                             <h2 class="user-name title">
                                                 Alexandr
@@ -273,7 +273,7 @@
                                     <div class="message-date">1 min ago</div>
                                 </article>
                                 <article class="message-body">
-                                    <div class="personal-message">
+                                    <div class="all-message personal-message">
                                         <div class="message-header">
                                             <h2 class="user-name title">Ed</h2>
                                         </div>
@@ -281,11 +281,10 @@
                                             Lorem ipsum dolor, sit amet
                                         </div>
                                     </div>
-
                                     <div class="message-date">5 min ago</div>
                                 </article>
                                 <article class="message-body">
-                                    <div class="other-message">
+                                    <div class="all-message other-message">
                                         <div class="message-header">
                                             <h2 class="user-name title">
                                                 Sasha
@@ -300,7 +299,7 @@
                                     <div class="message-date">10 min ago</div>
                                 </article>
                                 <article class="message-body">
-                                    <div class="my-message">
+                                    <div class="all-message my-message">
                                         <div class="message-header">
                                             <h2 class="user-name title">
                                                 Alexandr
@@ -318,7 +317,7 @@
                                     <div class="message-date">1 min ago</div>
                                 </article>
                                 <article class="message-body">
-                                    <div class="personal-message">
+                                    <div class="all-message personal-message">
                                         <div class="message-header">
                                             <h2 class="user-name title">Ed</h2>
                                         </div>
@@ -332,7 +331,7 @@
                                     <div class="message-date">5 min ago</div>
                                 </article>
                                 <article class="message-body">
-                                    <div class="other-message">
+                                    <div class="all-message other-message">
                                         <div class="message-header">
                                             <h2 class="user-name title">
                                                 Sasha
@@ -347,7 +346,7 @@
                                     <div class="message-date">10 min ago</div>
                                 </article>
                                 <article class="message-body">
-                                    <div class="my-message">
+                                    <div class="all-message my-message">
                                         <div class="message-header">
                                             <h2 class="user-name title">
                                                 Alexandr
@@ -374,7 +373,7 @@
                                     <div class="message-date">1 min ago</div>
                                 </article>
                                 <article class="message-body">
-                                    <div class="personal-message">
+                                    <div class="all-message personal-message">
                                         <div class="message-header">
                                             <h2 class="user-name title">Ed</h2>
                                         </div>
@@ -384,7 +383,7 @@
                                     <div class="message-date">5 min ago</div>
                                 </article>
                                 <article class="message-body">
-                                    <div class="other-message">
+                                    <div class="all-message other-message">
                                         <div class="message-header">
                                             <h2 class="user-name title">
                                                 Sasha
@@ -399,7 +398,7 @@
                                     <div class="message-date">10 min ago</div>
                                 </article>
                                 <article class="message-body">
-                                    <div class="other-message">
+                                    <div class="all-message other-message">
                                         <div class="message-header">
                                             <h2 class="user-name title">
                                                 Sasha
@@ -414,7 +413,6 @@
                                     <div class="message-date">10 min ago</div>
                                 </article>
 
-                                <!--  -->
                                 <div class="load-new">
                                     <span
                                         class="iconify icon-load"
@@ -423,7 +421,7 @@
                                     >
                                     </span
                                     ><span>Load more...</span>
-                                </div>
+                                </div> -->
                             </section>
                             <div class="typing">
                                 <div class="typing-body">
