--- a/src/index.html
+++ b/src/index.html
@@ -194,7 +194,9 @@
                                 <section class="message-list" id="messageList">
                                                                
                                 </section>
-                                <div class="typing">
+
+
+                                <template id='typing-template'>
                                     <div class="typing-body">
                                         <input
                                             type="text"
@@ -231,6 +233,8 @@
                                             ></span>
                                         </button>
                                     </div>
+                                </template>
+                                <div class="typing">
                                 </div>
                             </section>
                         </div>
@@ -339,6 +343,27 @@
                     </div>
                 </footer>
             </div>
+        </template>
+        <template id="error-page">
+            <div class="wrapper">
+                <div style="display: none;"></div>
+                <div>
+                    <div class="error-wrapper">
+                        <div class="error-body">
+                            <span class="iconify error-icon" data-inline="false" data-icon="whh:emojisorry"></span>
+                            <div class="error-info">
+                                <h1>Oops</h1>
+                                <p>
+                                    We can't seem to find the page you're looking for.
+                                </p>
+                            </div>
+                        </div>
+                        <button class="error-btn" id="errBtn">
+                            Back to chat
+                        </button>
+                    </div>
+                </div>
+            </div>    
         </template>
     </body>
     <script src="script.js"></script>
