--- a/src/index.html
+++ b/src/index.html
@@ -245,9 +245,9 @@
                         <div class="space"></div>
                         <div class="footer-body">
                             <span>Author: Sary Alexandr</span>
-                            <span>Version: beta-0.3</span>
-                            <span>Date: 25.11.2020</span>
-                            <span>Special for DataMola JS Camping</span>
+                            <span>Version: relesase-1.0</span>
+                            <span>Date: 08.12.2020</span>
+                            <span>Specially for DataMola JS Camping</span>
                         </div>
                     </div>
                 </footer>
@@ -289,9 +289,9 @@
                         <div class="space"></div>
                         <div class="footer-body">
                             <span>Author: Sary Alexandr</span>
-                            <span>Version: beta-0.3</span>
-                            <span>Date: 24.10.2020</span>
-                            <span>Special for DataMola JS Camping</span>
+                            <span>Version: relesase-1.0</span>
+                            <span>Date: 08.12.2020</span>
+                            <span>Specially for DataMola JS Camping</span>
                         </div>
                     </div>
                 </footer>
@@ -336,9 +336,9 @@
                         <div class="space"></div>
                         <div class="footer-body">
                             <span>Author: Sary Alexandr</span>
-                            <span>Version: beta-0.3</span>
-                            <span>Date: 24.10.2020</span>
-                            <span>Special for DataMola JS Camping</span>
+                            <span>Version: relesase-1.0</span>
+                            <span>Date: 08.12.2020</span>
+                            <span>Specially for DataMola JS Camping</span>
                         </div>
                     </div>
                 </footer>
